--- a/index.html
+++ b/index.html
@@ -149,8 +149,13 @@
                     </li>
                     <li class="timeline-item">
                         <span class="font-bold">04/08/2025:</span> Pepe está mais animado e parece apresentar melhora. O exame para verificar Cinomose (que havia
-                        suspeita, devido aos sintomas) deu negativo. Ainda não está se alimentando por conta própria, mas está acordado, interagindo e explorando
+                        suspeita, devido aos sintomas) deu NEGATIVO. Ainda não está se alimentando por conta própria, mas está acordado, interagindo e explorando
                         o ambiente.
+                    </li>
+                    <li class="timeline-item">
+                        <span class="font-bold">07/08/2025:</span> Pepe tem apresentado algumas convulsões e para isso tem tomado medicação que o deixa um pouco
+                        desacordado algumas horas do dia. Seguimos procurando alternativas para reerguer ele e estamos tentando identificar a origem dessas
+                        convulsões.
                     </li>
                 </ul>
             </section>
