Atualizando timeline e adicionando links para pagamento e recbibos

--- a/index.html
+++ b/index.html
@@ -112,14 +112,14 @@
                 <button id="pixButton" class="flex-1 px-6 py-3 rounded-lg text-white font-bold transition-transform transform hover:scale-105 bg-blue-600 shadow-md flex items-center justify-center gap-2" style="background-color: rgba(66, 107, 131, 1);">
                     <span><i class="fa-brands fa-pix"></i></span> Ajudar com Pix
                 </button>
-                <a href="#" target="_blank" class="flex-1 px-6 py-3 rounded-lg text-white font-bold text-center transition-transform transform hover:scale-105 bg-gray-600 shadow-md flex items-center justify-center gap-2" style="background-color: rgba(109, 114, 115, 1);">
+                <a href="https://link.mercadopago.com.br/magnogaspar" target="_blank" class="flex-1 px-6 py-3 rounded-lg text-white font-bold text-center transition-transform transform hover:scale-105 bg-gray-600 shadow-md flex items-center justify-center gap-2" style="background-color: rgba(109, 114, 115, 1);">
                     <span><i class="fa-solid fa-credit-card"></i></span> Ajudar com Cartão
                 </a>
             </div>
             
             <!-- Link de comprovantes -->
             <div class="text-center">
-                <a href="#" target="_blank" class="block text-gray-600 hover:underline font-medium" style="color: rgba(109, 114, 115, 1);">
+                <a href="https://drive.google.com/drive/folders/1ugqcKUEO34iz36MuwGWIVMkq3oqObW4b?usp=sharing" target="_blank" class="block text-gray-600 hover:underline font-medium" style="color: rgba(109, 114, 115, 1);">
                     Ver comprovantes de gastos e fotos
                 </a>
             </div>
