Corrigindo social images

--- a/index.html
+++ b/index.html
@@ -9,16 +9,22 @@
     <meta name="keywords" content="campanha, doação, cachorro, pepe, tratamento veterinário, hepatozoon canis, resgate animal">
     <meta name="author" content="Campanha do Pepe">
     
+    <!-- Open Graph (Facebook, LinkedIn, etc.) -->
     <meta property="og:title" content="🐾 Campanha do Pepe - Ajude a salvar uma vida! 🐾">
     <meta property="og:description" content="O Pepe é um cachorrinho resgatado que precisa de tratamento urgente para múltiplas doenças transmitidas por carrapatos. Diagnosticado com Hepatozoon Canis, erliquiose, dirofilariose e outras condições, ele está internado lutando pela vida. Sua doação pode fazer a diferença!">
-    <meta property="og:image" content="media/pepe-dormindo-resized.webp">
+    <meta property="og:image" content="https://campanha-pepe.github.io/media/pepe-dormindo-resized.webp">
     <meta property="og:image:alt" content="Pepe, um cachorrinho dormindo durante o tratamento">
-    <meta property="og:url" content="">
+    <meta property="og:url" content="https://campanha-pepe.github.io/">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Campanha do Pepe">
     <meta property="og:locale" content="pt_BR">
     
+    <!-- Twitter Cards -->
     <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="🐾 Campanha do Pepe - Ajude a salvar uma vida! 🐾">
+    <meta name="twitter:description" content="Pepe é um cachorrinho resgatado que precisa de tratamento urgente. Diagnosticado com múltiplas doenças transmitidas por carrapatos, ele luta pela vida. Sua doação pode ajudar!">
+    <meta name="twitter:image" content="https://campanha-pepe.github.io/media/pepe-dormindo-resized.webp">
+    <meta name="twitter:image:alt" content="Pepe, um cachorrinho dormindo durante o tratamento">    <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="🐾 Campanha do Pepe - Ajude a salvar uma vida! 🐾">
     <meta name="twitter:description" content="Pepe é um cachorrinho resgatado que precisa de tratamento urgente. Diagnosticado com múltiplas doenças transmitidas por carrapatos, ele luta pela vida. Sua doação pode ajudar!">
     <meta name="twitter:image" content="media/pepe-dormindo-resized.webp">
