--- a/index.html
+++ b/index.html
@@ -278,11 +278,21 @@
                                 <td class="px-2 py-1">Internação básica - até 5kg</td>
                                 <td class="px-2 py-1 text-right">296,00</td>
                             </tr>
-
+                            <!-- 08/08/2025 -->
+                            <tr class="border-b border-gray-100">
+                                <td class="px-2 py-1 font-bold" style="color: rgba(66, 107, 131, 1);">08/08/2025</td>
+                                <td class="px-2 py-1">Cremação Coletiva - até 5 kg</td>
+                                <td class="px-2 py-1 text-right">285,26</td>
+                            </tr>
+                            <tr class="border-b border-gray-100">
+                                <td class="px-2 py-1"></td>
+                                <td class="px-2 py-1">Internação básica - até 5kg</td>
+                                <td class="px-2 py-1 text-right">296,00</td>
+                            </tr>
                             <!-- Total Geral -->
                             <tr class="bg-blue-50 border-2" style="border-color: rgba(66, 107, 131, 0.3);">
                                 <td colspan="2" class="px-2 py-2 text-lg font-bold" style="color: rgba(66, 107, 131, 1);">TOTAL GERAL</td>
-                                <td class="px-2 py-2 text-right text-lg font-bold" style="color: rgba(66, 107, 131, 1);">4.567,23</td>
+                                <td class="px-2 py-2 text-right text-lg font-bold" style="color: rgba(66, 107, 131, 1);">5.148,49</td>
                             </tr>
                         </tbody>
                     </table>
@@ -321,6 +331,10 @@
                         <span class="font-bold">07/08/2025:</span> Pepe tem apresentado algumas convulsões e para isso tem tomado medicação que o deixa um pouco
                         desacordado algumas horas do dia. Seguimos procurando alternativas para reerguer ele e estamos tentando identificar a origem dessas
                         convulsões.
+                    </li>
+                    <li class="timeline-item">
+                        <span class="font-bold">08/08/2025:</span> Infelizmente, nesse dia, depois de muita luta do nosso Pepe e nossa, ele partiu.
+                        Agradecemos a todos que estiveram ao nosso lado.
                     </li>
                 </ul>
             </section>
